# shgo

./: README.rst  pyproject.toml
.github/workflows/: run-tests.yml
docs/: index.rst
shgo/: _shgo.py
shgo/tests/: test__shgo.py
