[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shgo"
version = "1.0.0"
description = "Simplicial homology global optimisation"
keywords = ["optimization"]
readme = "README.rst"
authors = [
    {name = "Stefan Endres, Carl Sandrock", email = "stefan.c.endres@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "scipy",
    "sobol-seq",
]
license = {text = "MIT"}
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/stefan-endres/shgo"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=shgo --disable-pytest-warnings"
filterwarnings = "error"
markers = ["slow: mark test that take too much time."]
testpaths = ["shgo/tests"]